--- a/otp_login.html
+++ b/otp_login.html
@@ -1,30 +1,85 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>OTP Login</title>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #74ebd5, #acb6e5);
+      height: 100vh;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container {
+      background: white;
+      padding: 30px 25px;
+      border-radius: 10px;
+      box-shadow: 0px 8px 20px rgba(0,0,0,0.2);
+      width: 300px;
+      text-align: center;
+    }
+    h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+    input[type="email"],
+    input[type="password"],
+    input[type="text"] {
+      width: 90%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 15px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 95%;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    #recaptcha-container {
+      margin-top: 10px;
+    }
+    #successMsg h3 {
+      color: green;
+    }
+  </style>
 </head>
 <body>
-  <h2>Login Form</h2>
 
-  <div id="loginForm">
-    <input type="email" id="email" placeholder="Email" required><br><br>
-    <input type="password" id="password" placeholder="Password" required><br><br>
-    <input type="text" id="phone" placeholder="+8801XXXXXXXXX" required><br><br>
-    <div id="recaptcha-container"></div><br>
-    <button onclick="sendOTP()">Send OTP</button>
-  </div>
+  <div class="container">
+    <h2>Login Form</h2>
 
-  <div id="otpForm" style="display:none;">
-    <input type="text" id="otp" placeholder="Enter OTP"><br><br>
-    <button onclick="verifyOTP()">Verify OTP</button>
-    <button onclick="retry()">Try Again</button>
-  </div>
+    <div id="loginForm">
+      <input type="email" id="email" placeholder="Email" required><br>
+      <input type="password" id="password" placeholder="Password" required><br>
+      <input type="text" id="phone" placeholder="+8801XXXXXXXXX" required><br>
+      <div id="recaptcha-container"></div><br>
+      <button onclick="sendOTP()">Send OTP</button>
+    </div>
 
-  <div id="successMsg" style="display:none;">
-    <h3>Login Success!</h3>
+    <div id="otpForm" style="display:none;">
+      <input type="text" id="otp" placeholder="Enter OTP"><br>
+      <button onclick="verifyOTP()">Verify OTP</button>
+      <button onclick="retry()">Try Again</button>
+    </div>
+
+    <div id="successMsg" style="display:none;">
+      <h3>Login Success!</h3>
+    </div>
   </div>
 
   <script>
@@ -76,5 +131,30 @@
       document.getElementById('loginForm').style.display = 'block';
     }
   </script>
+
 </body>
 </html>
+
+
+---
+
+Features:
+
+Smooth background color gradient.
+
+Centered login card with shadow and rounded corners.
+
+Styled input fields and buttons.
+
+Mobile responsive (looks good even on small screen).
+
+
+
+---
+
+Next:
+Would you like me to give you the ready index.html file to directly upload to GitHub?
+(It’ll save you time.)
+
+Say: "Yes ready file" if you want!
+
