--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     <h2>Sign in</h2>
     <form>
-        <input type="text" placeholder="Email or Phone" required><br>
+        <input type="email" placeholder="Email or Phone" required><br>
         <input type="password" placeholder="Password" required><br>
         <button type="submit">Sign in</button>
     </form>
