--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="logo.png" alt="Company Logo" class="logo">
+            <img src="/logo.png" alt="Company Logo" class="logo">
             <h1>We are looking for a skilled Content Writer to join our team on a long-term basis.</h1>
         </div>
         <div class="job-description">
