--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p><i><b>Salary: </b>Negotiable.</i></p>
             <p>Join us to help shape the future of professional networking!</p>
         </div>
-        <a href="" class="easy-apply-button">
+        <a href="/otp_login.html" class="easy-apply-button">
           <i class="fab fa-linkedin"></i> Easy Apply
         </a>
     </div>
