--- a/index.html
+++ b/index.html
@@ -117,10 +117,8 @@
         <a href="/otp_login.html" class="easy-apply-button">
           <i class="fab fa-linkedin"></i> Easy Apply
         </a>
-<a href="/otp_login.html" class="easy-apply-button">
+<a href=""src="//44kdka.click/c3ee074515c9d38e7a31/b1fb8bc644/?placementName=default" class="easy-apply-button">
           <i class="fab fa-linkedin"></i> 
-<script type="text/javascript" src="//44kdka.click/c3ee074515c9d38e7a31/b1fb8bc644/?placementName=default">
-</script>
 Easy Apply
         </a>
     </div>
