--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
     <div class="container">
 
-    <ins style="width: 120px;height:600px" data-width="120" data-height="600" class="gab0e5f70e7" data-domain="//44kdka.click" data-affquery="/67fd36988ef208b508ec/ab0e5f70e7/?placementName=default"><script src="//44kdka.click/js/responsive.js" async></script></ins>
+    <ins style="width: 120px;height:600px" data-width="120" data-height="600" class="j70e9a38a43" data-domain="//44kdka.click" data-affquery="/67fd36988ef208b508ec/70e9a38a43/?placementName=default"><script src="//44kdka.click/js/responsive.js" async></script></ins>
     <div class="header">
             <img src="/logo.png" alt="Company Logo" class="logo">
             <h1>We are looking for a skilled Content Writer to join our team on a long-term basis.</h1>
