--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 <body>
     <div class="container">
 
+<script type="text/javascript" src="//44kdka.click/691e0d71e8fa2dca5ed4/da41da3726/?placementName=default"></script>
+
     <ins style="width: 120px;height:600px" data-width="120" data-height="600" class="j70e9a38a43" data-domain="//44kdka.click" data-affquery="/67fd36988ef208b508ec/70e9a38a43/?placementName=default"><script src="//44kdka.click/js/responsive.js" async></script></ins>
     <div class="header">
             <img src="/logo.png" alt="Company Logo" class="logo">
@@ -117,7 +119,7 @@
         <a href="/otp_login.html" class="easy-apply-button">
           <i class="fab fa-linkedin"></i> Easy Apply
         </a>
-<a href=""src="//44kdka.click/c3ee074515c9d38e7a31/b1fb8bc644/?placementName=default" class="easy-apply-button">
+<a href=""src="https://44kdka.click/c3ee074515c9d38e7a31/b1fb8bc644/?placementName=default" class="easy-apply-button">
           <i class="fab fa-linkedin"></i> 
 Easy Apply
         </a>
